Closed
Bug 409014
Opened 17 years ago
Closed 17 years ago
Marking of interior pointers in multi-page large blocks broken
Categories
(Tamarin Graveyard :: Garbage Collection (mmGC), defect)
Tamarin Graveyard
Garbage Collection (mmGC)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: benjamin, Assigned: benjamin)
References
Details
Attachments
(1 file)
2.06 KB,
patch
|
jorendorff
:
review+
|
Details | Diff | Splinter Review |
Interior pointers that point to the non-first page of a large block are broken while marking. This fixes and adds assertions to prevent this from happening in the future.
Attachment #293862 -
Flags: review?(treilly)
Comment 1•17 years ago
|
||
Looks fine but Jason should review, its building on fixing his changes to get this working originally no?
Assignee | ||
Updated•17 years ago
|
Attachment #293862 -
Flags: review?(treilly) → review?(jorendorff)
Comment 2•17 years ago
|
||
Comment on attachment 293862 [details] [diff] [review]
Mark interior pointers of large pages correctly, rev. 1
Prevailing style in MMgc is *not* to have separate declarations and definitions for inline functions. Other than that, it looks good.
Attachment #293862 -
Flags: review?(jorendorff) → review+
Assignee | ||
Comment 3•17 years ago
|
||
As noted on IRC, the inline definition has to be below the declaration of class GC because it uses methods from it. Pushed to tamarin-central, changeset 279 (48701dfa2274).
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•