Bug 409014 - Marking of interior pointers in multi-page large blocks uses a RealPointer instead of a UserPointer, r=jorendorff